[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/door.gd" type="Script" id=1]
[ext_resource path="res://assets/tile_door.png" type="Texture" id=2]
[ext_resource path="res://assets/screened.material" type="Material" id=3]
[ext_resource path="res://scripts/four_way_occluder.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="DoorRight" type="Node2D" groups=["resettable"]]
position = Vector2( 896, -1152 )
script = ExtResource( 1 )

[node name="FourWayOccluder" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -128 )
height = 256.0
e_occlude = false
w_occlude = false

[node name="TileDoor" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 0, -128 )
scale = Vector2( 0.5, 0.595349 )
texture = ExtResource( 2 )
centered = false
flip_h = true

[node name="TileDoorOpen" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 113, -128 )
scale = Vector2( 0.0585938, 0.595349 )
texture = ExtResource( 2 )
centered = false
flip_h = true

[node name="StaticBody" type="StaticBody2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape" type="CollisionShape2D" parent="StaticBody"]
position = Vector2( 64, 64 )
shape = SubResource( 1 )
